# CMSIS

./: source URL.txt
DSP/: README.md  configCore.cmake  configLib.cmake
DSP/BuildDSPOnly/: CMakeLists.txt
DSP/Toolchain/: Tools.cmake
